헤더 닉네임 표기 사이즈 medium -> large

--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -66,7 +66,7 @@
                         <li class="nav-item dropdown p-2" sec:authorize="isAuthenticated()">
                             <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 <i class="material-icons account_circle">&#xe853;</i>
-                                <span class="d-none d-md-inline-block" th:text="${#authentication.principal.nickname}"></span>
+                                <span style="font-size:large;" class="d-none d-md-inline-block" th:text="${#authentication.principal.nickname}"></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-small">
 <!--                                <a class="dropdown-item" href="user-profile-lite.html">-->
