--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -36,10 +36,9 @@
                 </div>
             </div>
             <div class="col-lg-4">
-                <div class="card card-small mb-4" style="height: 180px; padding-top: 20px;">
+                <div class="card card-small mb-4" style="height: 180px;">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item p-4 text-center">
-
                             <strong class="page-title" th:text="|${spotDto.name}|"style="font-size:xx-large; font-family: 'Jua', sans-serif;"></strong>
                             <strong class="text-muted d-block mb-2">Description</strong>
                             <span th:text="|${spotDto.description}|"></span>
