마이페이지에서 내 닉네임 수정시 오른쪽 상단에 바로 반영되지 않는 문제를 로그아웃으로 해결

--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -9,8 +9,8 @@
                         <nav class="navbar align-items-stretch navbar-light bg-white flex-md-nowrap border-bottom p-0">
                             <a class="navbar-brand w-100 mr-0" href="/spot/show" style="line-height: 25px;">
                                 <div class="d-table m-auto">
-                                    <img id="sub-logo" class="d-inline-block align-top mr-1" style="padding-left: 30px; max-width:70px;" th:src="@{/images/damda_icon.png}" alt="Shards Dashboard">
-                                    <img id="main-logo" class="d-inline-block align-top mr-1" style="padding-top: 5px;max-width:150px;" th:src="@{/images/damda_logo.png}" alt="Shards Dashboard">
+                                    <img id="main-logo" class="d-inline-block align-top mr-1" style="padding-left: 30px; max-width: 55px;" th:src="@{/images/shards-dashboards-logo.svg}" alt="Shards Dashboard">
+                                    <span class="d-none d-md-inline ml-1">DAMDA</span>
                                 </div>
                             </a>
                             <a class="toggle-sidebar d-sm-inline d-md-none d-lg-none">
