--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" th:href="@{/calendar-19/css/style.css}">
 </head>
 <div layout:fragment="content" class="mt-3 container justify-content-around"
-     style="width: 95%; min-height: 100%; position:relative;">
+     style="width: 95%; min-height: 100%; position:relative; margin-top:70px !important;">
     <input type="hidden" name="plan_id" th:value="${plan.id}">
     <input type="hidden" name="plan_size" th:value="${plan.size}">
     <input type="hidden" name="course" th:value="${course}">
     <!--제목과 수정, 삭제 버튼-->
     <div class="justify-content-between d-flex mb-2" style="height: 10%;">
-        <h1 th:text="${plan.title}"></h1>
+        <h1 style="font-family: 'Jua', sans-serif; " th:text="${plan.title}"></h1>
         <div class="d-flex w-25" style="align-items: center; text-align: center;">
             <a class="w-50 h-100 btn btn-outline-secondary mr-2 fs-4" style="align-items: center; font-family: 'Jua', sans-serif;"
                th:href="@{|/travel/design/modification/basic/${plan.id}|}">
@@ -59,7 +59,7 @@
     <!--여행지 코스 정보 / 지도 + 캘린터-->
     <div class="justify-content-around d-flex" style="max-height: 80%;">
         <!--        <div class="content">-->
-        <div style="width: 40%;" id='calendar'></div>
+        <div style="width: 40%; margin-left:0" id='calendar'></div>
 
         <!--            <script th:src="@{/calendar-19/js/jquery-3.3.1.min.js}"></script>-->
         <script th:src="@{/calendar-19/js/popper.min.js}"></script>
