채팅창 가로스크롤 제거

--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -121,7 +121,7 @@
                         <button class="btn btn-primary" type="button" @click="sendMessage">보내기</button>
                     </div>
                 </div>
-                <ul style="overflow: scroll; height: 500px" class="list-group">
+                <ul style="overflow: scroll; overflow-y:scroll; overflow-x:hidden; height: 500px" class="list-group">
                     <li class="list-group-item" v-for="message in messages">
                         {{message.nick}} - {{message.content}}
                     </li>
