--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -7,7 +7,7 @@
         <!-- Page Header -->
         <div class="page-header row no-gutters py-4">
             <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
-                <h3 class="page-title"style="font-family: 'Jua', sans-serif;">Spot Detail Infomation</h3>
+                <h3 class="page-title"style="font-family: 'Jua', sans-serif;" th:text="|${spotDto.name}|"></h3>
             </div>
         </div>
         <!-- End Page Header -->
