--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -64,7 +64,7 @@
                         </form>
 
                     </div>
-                    <div class="card-body p-0" style="overflow:scroll;">
+                    <div class="card-body p-0" style="overflow:scroll; overflow-y:scroll; overflow-x:hidden;">
 
                         <div th:each="review : ${spotDto.reviews}" class="blog-comments__item d-flex p-3">
                             <div class="blog-comments__content">
