쓰지않는 링크 주석처리

--- a/src/main/resources/templates/review/readReview.html
+++ b/src/main/resources/templates/review/readReview.html
@@ -42,7 +42,7 @@
                         <li class="list-group-item p-3">
                             <span class="d-flex mb-2" th:each="Tag :${review.reviewTags}">
                             <span th:text="${review.getTag(review,TagStat.index)}"></span>
-                          <a class="ml-auto" href="#">Go!</a>
+                          <!--<a class="ml-auto" href="#">Go!</a>-->
                         </span>
                         </li>
                     </ul>
