--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -108,7 +108,7 @@
                                 </h5>
                             </div>
                             <div class="btn-group">
-                                <button type="button" class="btn btn-secondary dropdown-toggle"
+                                <button type="button" class="btn btn-primary dropdown-toggle"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                     option
                                 </button>
