플래너 날짜 수정 기능 구현

--- a/src/main/resources/templates/design/map/modify_basic.html
+++ b/src/main/resources/templates/design/map/modify_basic.html
@@ -55,15 +55,15 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="input_from">From</label>
-                            <input type="text" class="form-control" th:field="*{plan.startDate}" id="input_from"
-                                   name="startDate" placeholder="Start Date">
+                            <input type="text" class="form-control" th:field="*{plan.startDateString}" id="input_from"
+                                   name="startDateString" placeholder="Start Date">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="input_from">To</label>
-                            <input type="text" class="form-control" th:field="*{plan.endDate}" id="input_to"
-                                   name="endDate" placeholder="End Date">
+                            <input type="text" class="form-control" th:field="*{plan.endDateString}" id="input_to"
+                                   name="endDateString" placeholder="End Date">
                         </div>
                     </div>
                     <!--                    <script th:src="@{/calendar-15/js/jquery-3.3.1.min.js}"></script>-->
