로그인 화면에 파비콘 적용

--- a/src/main/resources/templates/layout/layout_user.html
+++ b/src/main/resources/templates/layout/layout_user.html
@@ -4,6 +4,7 @@
 <!-- 공통 헤드-->
 <head>
     <title>DAMDA</title>
+    <link rel ="icon" href="/images/damda_icon.png">
     <!-- Site favicon -->
     <link rel="shortcut icon" href="images/favicon.ico">
     <!-- Mobile Specific Metas -->
