detail에 공유 버튼 추가

--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -18,28 +18,45 @@
     <!--제목과 수정, 삭제 버튼-->
     <div class="justify-content-between d-flex mb-2" style="height: 10%;">
         <h1 style="font-family: 'Jua', sans-serif; " th:text="${plan.title}"></h1>
-        <div class="d-flex w-25" style="align-items: center; text-align: center;">
-            <a class="w-50 h-100 btn btn-outline-secondary mr-2 fs-4" style="align-items: center; font-family: 'Jua', sans-serif;"
-               th:href="@{|/travel/design/modification/basic/${plan.id}|}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+        <div class="d-flex w-30" style="align-items: center; text-align: center;">
+            <a class="w-50 h-100 btn btn-outline-secondary mr-2 fs-4"
+               style="align-items: center; font-family: 'Jua', sans-serif;"
+               th:href="@{|/travel/design/share/${plan.id}|}">
+                <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="25px" height="25px">
+                    <path d="M 41 2 C 37.145851 2 34 5.1458514 34 9 C 34 10.842988 34.724355 12.518937 35.896484 13.771484 L 27.525391 24 L 15.919922 24 C 15.430748 20.617539 12.513828 18 9 18 C 5.1458514 18 2 21.145851 2 25 C 2 28.854149 5.1458514 32 9 32 C 12.513828 32 15.430748 29.382461 15.919922 26 L 27.501953 26 L 35.535156 36.640625 C 34.5767 37.838633 34 39.353257 34 41 C 34 44.854149 37.145851 48 41 48 C 44.854149 48 48 44.854149 48 41 C 48 37.145851 44.854149 34 41 34 C 39.515247 34 38.13907 34.471256 37.003906 35.265625 L 29.271484 25.025391 L 37.455078 15.021484 C 38.496931 15.638103 39.706395 16 41 16 C 44.854149 16 48 12.854149 48 9 C 48 5.1458514 44.854149 2 41 2 z M 41 4 C 43.773268 4 46 6.2267316 46 9 C 46 11.773268 43.773268 14 41 14 C 38.226732 14 36 11.773268 36 9 C 36 6.2267316 38.226732 4 41 4 z M 9 20 C 11.773268 20 14 22.226732 14 25 C 14 27.773268 11.773268 30 9 30 C 6.2267316 30 4 27.773268 4 25 C 4 22.226732 6.2267316 20 9 20 z M 41 36 C 43.773268 36 46 38.226732 46 41 C 46 43.773268 43.773268 46 41 46 C 38.226732 46 36 43.773268 36 41 C 36 38.226732 38.226732 36 41 36 z"/>
                 </svg>
                 <br>
-                기본 정보 수정
+                공유
             </a>
-            <a class="w-50 h-100 btn btn-outline-secondary mr-2 fs-4" style="align-items: center; font-family: 'Jua', sans-serif;"
+            <a class="w-50 h-100 btn btn-outline-secondary mr-2 fs-4"
+               style="align-items: center; font-family: 'Jua', sans-serif;"
                th:href="@{|/travel/design/modification/${plan.id}?order=1|}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                     class="bi bi-pencil-square" viewBox="0 0 16 16">
                     <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                    <path fill-rule="evenodd"
+                          d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
                 </svg>
                 <br>
                 수정
             </a>
-            <a class="w-50 h-100 btn btn-outline-danger fs-4" onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;" style="font-family: 'Jua', sans-serif; align-items: center;"
+            <a class="w-50 h-100 btn btn-outline-secondary mr-2 fs-4"
+               style="align-items: center; font-family: 'Jua', sans-serif;"
+               th:href="@{|/travel/design/modification/basic/${plan.id}|}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                     class="bi bi-pencil-square" viewBox="0 0 16 16">
+                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                    <path fill-rule="evenodd"
+                          d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                </svg>
+                <br>
+                기본 정보 수정
+            </a>
+            <a class="w-50 h-100 btn btn-outline-danger fs-4" onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"
+               style="font-family: 'Jua', sans-serif; align-items: center;"
                th:href="@{|/travel/design/plan/delete/${plan.id}|}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-trash3"
+                     viewBox="0 0 16 16">
                     <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
                 </svg>
                 <br>
@@ -123,15 +140,20 @@
             <div class="mb-1 card card text-center">
                 <h2 th:text="|${course.orders}일차|" class="fs-3" style="font-family: 'Jua', sans-serif;"></h2>
             </div>
-            <div class="mb-2 d-flex bg-white shadow px-3 py-4 bg-body rounded justify-content-start" style="width:100%; max-height:100%; white-space: nowrap; overflow: auto;">
-                <h3 th:if="${course.spotList.size() == 0}" class="text-center" style="font-family: 'Jua', sans-serif;">장소를 추가해 보세요!</h3>
+            <div class="mb-2 d-flex bg-white shadow px-3 py-4 bg-body rounded justify-content-start"
+                 style="width:100%; max-height:100%; white-space: nowrap; overflow: auto;">
+                <h3 th:if="${course.spotList.size() == 0}" class="text-center" style="font-family: 'Jua', sans-serif;">
+                    장소를 추가해 보세요!</h3>
                 <div th:each="spot, loop : ${course.spotList}">
                     <a th:if="${loop.count != 1}" class="mr-2 badge badge-outline-danger">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                  d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
                         </svg>
                     </a>
-                    <a class="btn btn-outline-primary mr-2" th:href="@{|http://place.map.kakao.com/${spot.urlId}|}" style="white-space: nowrap;"
+                    <a class="btn btn-outline-primary mr-2" th:href="@{|http://place.map.kakao.com/${spot.urlId}|}"
+                       style="white-space: nowrap;"
                        target="_blank" th:text="|${spot.name}|"></a>
                 </div>
             </div>
@@ -165,7 +187,6 @@
 
                     // 지도를 재설정할 범위정보를 가지고 있을 LatLngBounds 객체를 생성합니다
                     var bounds = new kakao.maps.LatLngBounds();
-
 
 
                     var positions = [];
@@ -216,6 +237,7 @@
                             }
                         });
                     });
+
                     function setBounds() {
                         // LatLngBounds 객체에 추가된 좌표들을 기준으로 지도의 범위를 재설정합니다
                         // 이때 지도의 중심좌표와 레벨이 변경될 수 있습니다
