지도의 여행지 리스트에도 kakao map 링크 구현

--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -79,7 +79,7 @@
                     <div>
                         <form onsubmit="searchPlaces(); return false;">
                             <div class="input-group mb-1">
-                                <input type="text" value="이태원 맛집" id="keyword" size="15" class="form-control"
+                                <input type="text" value="제주도 맛집" id="keyword" size="15" class="form-control"
                                        aria-label="Recipient's username" aria-describedby="basic-addon2">
                                 <button type="submit" class="btn btn-primary p-2">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
