--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -41,7 +41,7 @@
                         <li class="nav-item w-200 d-none d-md-flex d-lg-flex" style="padding-top:10px; adding-left: 10px; padding-right: 10px;" th:if="${#authentication.principal.method.equals('d')}">
                             <a class="nav-link " th:href="@{/user/my_page}">
                                 <i class="material-icons">person</i>
-                                <span>마이페이지</span>
+                                <span style="font-size:large;">마이페이지</span>
                             </a>
                         </li>
                         <li class="nav-item w-200 d-none d-md-flex d-lg-flex" style="padding-top:8px; padding-left: 10px; padding-right: 10px;" th:if="!${#authentication.principal.method.equals('d')}">
