휴양 버그 수정, map.js '이미 장바구니에 있습니다' 수정

--- a/src/main/resources/templates/spot/spotList.html
+++ b/src/main/resources/templates/spot/spotList.html
@@ -93,7 +93,7 @@
                                     <label class="custom-control-label" for="watching">볼거리</label>
                                 </div>
                                 <div class="custom-control custom-toggle custom-toggle-sm mb-1">
-                                    <input type="checkbox" id="healing" name="checkedValue" class="custom-control-input" value="휴량"
+                                    <input type="checkbox" id="healing" name="checkedValue" class="custom-control-input" value="휴양"
                                            th:checked="${#lists.contains(checkedValue, '휴양')}">
                                     <label class="custom-control-label" for="healing">휴양</label>
                                 </div>
