REFACTOR : Busket Entity 삭제 & scripts 에러 발생 연결 주석처리
Plan과 일대일 관계인 Busket 엔티티 삭제 후
Plan과 Spot 엔티티 사이의 PlanSpot 엔티티를 만들었습니다.
이를 통해 장바구니 역할을 대신했습니다.

레이아웃에서 scripts 부분에서 에러가 발생하는 연결은 주석처리했습니다.

--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -21,7 +21,7 @@
                         <script type="text/javascript"
                                 src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4090d1fa0bb6c1caf12b3ec69597bf5c&libraries=services"></script>
                         <script th:inline="javascript">
-                            var planBusket = [[${plan.busket.spotList}]];
+                            var planBusket = [[${plan.spotDtos}]];
                             console.log([[${loop.count}]]);
                             console.log('map'+[[${loop.count}]]);
                             var mapContainer = document.getElementById('map'+[[${loop.count}]]), // 지도를 표시할 div
